Update ru.json to be8a78e

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1926,7 +1926,8 @@
 			"weapon.mod": "Модификаторы оружия:",
 			"stunOrPhysical": "Оглушающий (true) или Физический (false) урон",
 			"dicePoolMod": "Модификатор всех наборов кубиков",
-			"wild": "Использовать (установите Перезапись: true)"
+			"wild": "Использовать дикий кубик (установите Перезапись: true)",
+			"badLuck": "Сбои как в качестве «Неудача» (установите Перезапись: true)"
 		},
 		"KEYBINDINGS": {
 			"bindTokenControlGroup": "Связать выбранные токены в группу управления",
