Update change notes of 3.3.0

--- a/releasenotes/notes/3.3.0.mkd
+++ b/releasenotes/notes/3.3.0.mkd
@@ -34,14 +34,15 @@ This major version update will be the last one that is v12 compatible. The next 
 - Add search by GenesisID to Item Compendiums
 - Prepare DataModel framework for Sprites and other Matrix Actors planned for 3.4.0 (#82)
 - Renamed "Adjust" to "Mod" in English translation on Actor Sheets
-- Add this.owner pointer to Vehicle type actor (dev)
-- New subString HandleBars helper (dev)
+- Add generic Dice Pool Modifier support to Active Effects (#137)
+- Add Bad Luck support for Active Effects
 - Update foundry verified compatibility to 13.347
 
 ### Bug Fixes
 - Fix: Prevent NPC Statblock importer to be triggered when an input/text editor was selected
 - Fix attack ratings can be 0 when modified and are only "-" if base statline is 0
 - Fix: migrate any old ammo/price/dmg/AR values from strings to integers (#139)
+- Fix a ton of regression issues when implementing ActiveEffects & Gear Mods (special thanks to TheFokin for testing & reporting)
 - Fix collapsible sections - their open/closed state is no longer saved in DB - as it caused issues; On browser refresh they are closed again
 - Show SIN ratings in the SIN quality description (en)
 - Fix various localizations
