Update ru.json up to 3.3.1

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1927,7 +1927,8 @@
 			"stunOrPhysical": "Оглушающий (true) или Физический (false) урон",
 			"dicePoolMod": "Модификатор всех наборов кубиков",
 			"wild": "Использовать дикий кубик (установите Перезапись: true)",
-			"badLuck": "Сбои как в качестве «Неудача» (установите Перезапись: true)"
+			"badLuck": "Сбои как в качестве «Неудача» (установите Перезапись: true)",
+			"painTolerance": "Болевой порог (Установите Перезапись: high для кчества «Устойчивость к боли» или low дя «Низкий болевой порог»)"
 		},
 		"KEYBINDINGS": {
 			"bindTokenControlGroup": "Связать выбранные токены в группу управления",
