Fixing typos in ru.json

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -103,7 +103,7 @@
 		"str_short": "СИЛ",
 		"wil": "Воля",
 		"wil_short": "ВОЛ",
-		"max_augment": "Модификатор ваших аугментаций превышает максимально допустимое значение — 4. Значение соответствующей характеристики увеличнено на 4."
+		"max_augment": "Модификатор ваших аугментаций превышает максимально допустимое значение — 4. Значение соответствующей характеристики увеличено на 4."
 	},
 	"skill": {
 		"astral": "Астрал",
@@ -328,7 +328,7 @@
 				"ELECTRONIC_ACCESSORIES": "Аксессуары для электроники",
 				"EXPLOSIVES": "Взрывчатка",
 				"FIREARMS": "Огнестрельное оружие",
-				"FIREARMS_ACCESSORY": "Аксуссуары для оружия",
+				"FIREARMS_ACCESSORY": "Аксессуары для оружия",
 				"FIXED_WING": "ЛА с неподвижным крылом",
 				"FOCI_ENCHANTING": "Зачаровывающие",
 				"FOCI_METAMAGIC": "Метамагические источники",
@@ -787,7 +787,7 @@
 			},
 			"jam_signals": {
 				"name": "Сгенерировать помехи",
-				"hint": "Пока вы не используете устройство для другий действий, оно увеличивает рейтинг шума на количество успехов в радиусе 100 метров."
+				"hint": "Пока вы не используете устройство для других действий, оно увеличивает рейтинг шума на количество успехов в радиусе 100 метров."
 			},
 			"jump_rigged": {
 				"name": "Подключиться к ригнутому устройству",
@@ -894,7 +894,7 @@
 			"physical": "Здоровье",
 			"physical_monitor": "Счётчик здоровья",
 			"stun": "Оглушение",
-			"stun_monitor": "Счёткик оглушения",
+			"stun_monitor": "Счётчик оглушения",
 			"overflow": "Критический",
 			"dead": "МЁРТВ",
 			"broken": "СЛОМАНО"
@@ -1028,7 +1028,7 @@
 			},
 			"defuse": {
 				"name": "Обезвреживание",
-				"desc": "Позволяет использовать проверку рейтинга устройства или Теля для выдерживания урона от инфобомбы."
+				"desc": "Позволяет использовать проверку рейтинга устройства или Тела для выдерживания урона от инфобомбы."
 			},
 			"exploit": {
 				"name": "Эксполйт",
@@ -1417,7 +1417,7 @@
 				"name": "Броня снижает физический урон"
 			},
 			"rollStrengthCombat": {
-				"hint": "Если атака в ближнем бою зависит от массы и скорости оружия, можно проходить проверку Силы вместо Проворства. При использовании этого правила значение Проворства добавляется к Значению атаки вместо Силы. Оружие необходимо (если имеет смысл) держать обеими руками. (SWC стро. 150)",
+				"hint": "Если атака в ближнем бою зависит от массы и скорости оружия, можно проходить проверку Силы вместо Проворства. При использовании этого правила значение Проворства добавляется к Значению атаки вместо Силы. Оружие необходимо (если имеет смысл) держать обеими руками. (SWC стр. 150)",
 				"name": "В ближнем бою проходит проходить проверку Силы, а не Проворства"
 			},
 			"highStrengthAddsDamage": {
@@ -1900,13 +1900,13 @@
 			"usage_tips": {
 				"1": "В обычном режиме при помощи ключа модификатора можно изменить значение характеристики, размер набора кубиков или рейтинг.",
 				"2": "Используйте ключ набора кубиков только в случае, если значение характеристики нужно <em>полностью заменить</em>, как в случае с киберконечностями и прошивкой навыка.",
-				"3": "В соответствии с правилами шестой редакции Shadowrun, модификаторы характеристик автоматически ограничены до +4."
+				"3": "В соответствии с правилами «Shadowrun: Шестой мир», модификаторы характеристик автоматически ограничены до +4."
 			},
 			"item_tip": "Если вам нужно, чтобы модификатор изменял характеристику непосредственно предмета непосредственно, то вам <em>необходимо</em> снять галочку <em>«Передача эффекта актёру»</em> во вкладке «Подробности». Один эффект может применяться <em>только либо</em> к предмету, <em>либо</em> к актёру.",
 			"gear_mod_tip": "Это активный эффект <strong>модификации снаряжения</strong>. Такие эффекты применяются к предметам, на которые установлена модификация.",
 			"more_info": "Для подробной информации пройдите по следующей ссылке:",
 			"advanced": "Продвинутый режим?",
-			"advanced_hint": "Если поставлена галочка, то вы можете использовать системные ключи атрибутов вместо предложенного перечня для шестой редакции Shadowrun.",
+			"advanced_hint": "Если поставлена галочка, то вы можете использовать системные ключи атрибутов вместо предложенного перечня для «Shadowrun: Шестой мир».",
 			"Modifier": "Модификатор: {attribute}",
 			"Skill": "Навык: {skill}",
 			"Pool": "Набор кубиков: {pool} (перезапись)",
@@ -1928,7 +1928,7 @@
 			"dicePoolMod": "Модификатор всех наборов кубиков",
 			"wild": "Использовать дикий кубик (установите Перезапись: true)",
 			"badLuck": "Сбои как в качестве «Неудача» (установите Перезапись: true)",
-			"painTolerance": "Болевой порог (Установите Перезапись: high для кчества «Устойчивость к боли» или low дя «Низкий болевой порог»)"
+			"painTolerance": "Болевой порог (установите Перезапись: high для качества «Устойчивость к боли» или low для «Низкий болевой порог»)"
 		},
 		"KEYBINDINGS": {
 			"bindTokenControlGroup": "Связать выбранные токены в группу управления",
