--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1738,7 +1738,7 @@
 				},
 				"wrong_import_file": "Файлы сохранений GENESIS или COMMLINK невозможно импортировать! Сначала экспортируйте файл в формате FoundryVTT JSON.",
 				"statblock_import": {
-					"error": "Что-то пошло не так при импортировании блока характеристик НИП. Попробуйте другую читалоку PDF, однако есть возможность, что ваш PDF файл не поддерживается.",
+					"error": "Что-то пошло не так при импортировании блока характеристик НИП. Попробуйте другую читалку PDF, однако есть возможность, что ваш блок характеристик не поддерживается.",
 					"success": "Блок характеристик «{actor}» скопирован ",
 					"actor_tab": "во вкладку актёров.",
 					"npc_compendium": "в библиотеку НИП."
