Update ru.json up to b30c955

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1356,7 +1356,8 @@
 			},
 			"sustained": {
 				"add": "Добавить новое заклинание",
-				"title": "Длительные заклинания"
+				"title": "Длительные заклинания",
+				"toggle": "Вкл./Выкл. длительность"
 			},
 			"survival": "Выживание",
 			"vehicles": {
