Update ru.json to solve 2 in #170

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -140,16 +140,16 @@
 			"name": "Имя",
 			"nav": {
 				"basics": "Основные сведения",
-				"biography": "Биография",
+				"biography": "Личные данные",
 				"combat": "Бой",
 				"description": "Описание",
-				"equip": "Обмундирование",
+				"equip": "Снаряжение",
 				"input": "Ввод",
 				"magic": "Магия",
 				"matrix": "Матрица",
 				"overview": "Обзор",
 				"skills": "Навыки",
-				"vehicles": "Транспортные средства"
+				"vehicles": "Транспорт"
 			},
 			"skills": "Навыки",
 			"spells": "Заклинания"
