Update ru.json to 262202d

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -236,6 +236,11 @@
 			"defense_rating": "Значение защиты",
 			"judge_intentions": "Проницательность",
 			"lift_carry": "Поднятие тяжестей",
+			"movement": {
+				"label": "Перемещение / Рывок",
+				"sprint_result": "{name} совершил(а) рывок на {metersSprinted} метров.",
+				"meter_short": "м"
+			},
 			"memory": "Память",
 			"matrix_perception": "Внимание в Матрице",
 			"heal": {
@@ -1929,7 +1934,10 @@
 			"dicePoolMod": "Модификатор всех наборов кубиков",
 			"wild": "Использовать дикий кубик (установите Перезапись: true)",
 			"badLuck": "Сбои как в качестве «Неудача» (установите Перезапись: true)",
-			"painTolerance": "Болевой порог (установите Перезапись: high для качества «Устойчивость к боли» или low для «Низкий болевой порог»)"
+			"painTolerance": "Болевой порог (установите Перезапись: high для качества «Устойчивость к боли» или low для «Низкий болевой порог»)",
+			"movementRate": "Скорость перемещения",
+			"movementSprintBase": "Основное значение рывка",
+			"movementSprintMultiplier": "Множитель рывка"
 		},
 		"KEYBINDINGS": {
 			"bindTokenControlGroup": "Связать выбранные токены в группу управления",
