Add Pronouns field to Contacts

--- a/lang/en.json
+++ b/lang/en.json
@@ -206,7 +206,8 @@
       "favors": "Favors",
       "favors_short": "Fav",
       "legwork": "Legwork",
-      "type": "Type"
+      "type": "Type",
+      "pronouns": "Pronouns"
     },
     "defense": {
       "astral": "Astral Combat",
