Update ru.json up to 969d63a

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -667,6 +667,7 @@
 			"rating2": "Рейтинг 2",
 			"rating3": "Рейтинг 3",
 			"slower": "Затормозить",
+			"soak": "сопротивление",
 			"soaked": "Выдержано {soaked} из {threshold} урона",
 			"specialization": "Специализация",
 			"speed_detail": "Вы двигаетесь со скоростью {speed} км/ч ({speedPerTurn} метров в ход). Маш модификатор проверок равен {modifier}.",
@@ -1348,6 +1349,7 @@
 				"normal": "Обычный",
 				"special": "Знаток"
 			},
+			"skills.level": "Уровень владения языком",
 			"skills.language_add": "Добавить новый язык",
 			"software": {
 				"add": "Добавить новую программу",
@@ -1439,6 +1441,10 @@
 			"cantDodgeBullets": {
 				"hint": "Встречные проверки во время атаки становятся обычными проверками против порога, устанавливаемого дистанцией и размером набора кубиков для защиты у цели. При этом цель всё так же может использовать преимущество против бросков атакующего. (SWC стр. 151)",
 				"name": "Нельзя уворачиваться от пуль"
+			},
+			"expandedSpecializations": {
+				"hint": "Количество специализаций навыка неограничено. Для получения новой специализации не нужно получать мастерство. Для каждого навыка можно всё так же получить только одно мастерство. (SWC стр. 153)",
+				"name": "Расширенные специализации"
 			}
 		},
 		"sin": {
